@startuml classes
set namespaceSeparator none
class "Action" as HandHistory.Action {
  action
  allin
  amount
  player
}
class "Award" as HandHistory.Award {
  amount
  player
  pot
}
class "Awards" as HandHistory.Awards {
  awards : list
}
class "Betting" as HandHistory.Betting {
  rounds : list
}
class "Game" as HandHistory.Game {
  tags : dict
}
class "HandHistory" as HandHistory.HandHistory {
  AWARDS
  BETTING
  GAME
  PLAYERS : dict
  POSTS
}
class "Player" as HandHistory.Player {
  allin : bool
  cards
  hand
  name
  seat
  showed_hand
  sitting_out : bool
  stack
  start_cards
}
class "Post" as HandHistory.Post {
  amount
  live
  player
  posted
}
class "Posts" as HandHistory.Posts {
  posts : list
}
class "Round" as HandHistory.Round {
  action : list
  name
}
HandHistory.Awards --* HandHistory.HandHistory : AWARDS
HandHistory.Betting --* HandHistory.HandHistory : BETTING
HandHistory.Game --* HandHistory.HandHistory : GAME
HandHistory.Posts --* HandHistory.HandHistory : POSTS
@enduml
